Fix: Update Swagger operationId
